# Calculator

./: pyproject.toml
src/: lexer.py  main.py  shunting_yard.py
tests/: test_lexer.py  test_main.py
