[project]
name = "calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "Stefanig28",email = "stefanigtorres@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
